# openlt-manifesto

./: Cargo.toml  README.md  db.sql
src/: main.rs
static/templates/: index.html  privacy.html  success.html
