[package]
name = "openlt-manifesto"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
edition = "2018"

[dependencies]
handlebars = "2.0.2"
url = "2.1.0"
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.42"
r2d2 = "0.8.7"
r2d2_sqlite = "0.12.0"
rusqlite = "0.20.0"
env_logger = "0.7.1"
tide = "0.4.0"
async-std = { version = "1.2.0", features = ["attributes"] }
mime = "0.3.14"
